# mgf-2

./: .gitignore  CLAUDE.md  dune-project  explain.html  notes.md  types.mmd  viz.html
.claude/agents/: codebase-discussant.md
book/: 404.html  index.html  print.html  recognize_with.html  searcher-c2a407aa.js  searchindex-2f59d0e8.js  toc-96a3148e.js  toc.html
docs/: CLAUDE.md  SUMMARY.md  add_item.md  book.toml  find_projections_from_item.md  find_projections_from_terminal.md  get_expansion_index.md  infer_parse_roots.md  notes.md  pipeline.md  process_agenda.md  recognize_with.md  simulator.html  types.md
grammars/: CLexer.java  Main.java  c_simple.g4  cparser.g4  gen_tree.txt  grammar_in_paper.g4  lisp.g4  simple.g4  stdin.c  stdin.c.p
lib/: convert.ml  cyk.ml  display.ml  domain_types.ml  dp.ml  dune  grammar_converter.ml  grammar_expander.ml  grammar_reader.ml  grammar_reader_utils.ml  grammars.ml  hcover.ml  htable.ml  io.ml  linear.ml  output.ml  print.ml  query.ml  recognize.ml  reconstruct.ml  seed.ml  symbol_table.ml  table.ml  types.ml  worklist.ml
paper/: citations.md  main.typ  refs.bib
test/: dune  test_practice.ml  test_specs.ml
theory/: main.typ
