(library
 (name practice)
 (libraries str yojson unix)
 (modules
  types
  convert
  print
  display
  hcover
  table
  seed
  worklist
  recognize
  query
  reconstruct
  grammars
  output
  io
  htable
  domain_types
  grammar_reader
  grammar_reader_utils
  grammar_expander
  symbol_table
  grammar_converter))
